Add new index.html for Bengali-English hover sentences functionality

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1><a href="https://abuhena-roni.github.io/English_Practice/Hover-sentences-Bengali-English/">Hover sentences Bengali-English 01 (I)</a></h1>
+    <h1><a href="https://abuhena-roni.github.io/English_Practice/Hover-sentences-Bengali-English-02/">Hover sentences Bengali-English 02 (I)</a></h1>
 </body>
 </html>
